Fixed lang. Swedish got hidden and was kept hidden

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>XytherisWebStudio - Web Development for Small Businesses</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body data-current-lang="en">
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container">
